[Mac][Material Design] Fix strange Apps button highlight in dark themes.

The button needs to be set to not show highlighting.

R=avi@chromium.org
BUG=616406

Review-Url: https://codereview.chromium.org/2031023002
Cr-Commit-Position: refs/heads/master@{#397502}

Former-commit-id: f9cb6c37c2528abe53a22ef943e61764a1de9181